Add putModflowModelBoundingBoxAction
